--- a/virtualization/univention-virtual-machine-manager-schema/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-schema/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-schema (5.0.1-1) unstable; urgency=low
+
+  * Add schema for UVMM Cloud Connection and Type (Bug #32842)
+
+ -- Andreas Peichert <peichert@univention.de>  Wed, 20 Aug 2014 16:00:44 +0200
+
 univention-virtual-machine-manager-schema (5.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35361)
