Bug #35378: Start network in chroot
Needed in DHCP mode to get IP address saved in UCR.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52877 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+di-univention-system-setup (0.0.9-3) unstable; urgency=low
+
+  * Bug #35378: Start network in chroot
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 20 Aug 2014 14:29:41 +0200
+
 di-univention-system-setup (0.0.9-2) unstable; urgency=low
 
   * Bug #35378: Revert use of in-target [r52841], as it creates a denying
