--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-10) unstable; urgency=low
+
+  * Bug #35659: Merge UCS-3.2-3 trigger list
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 20 Aug 2014 18:05:57 +0200
+
 univention-dvd (0.2.0-9) unstable; urgency=low
 
   * Revert Bug #30547: Install recommends by default
