--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,21 @@
+univention-kernel-image (7.0.0-14) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #35226).
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Fri, 18 Jul 2014 07:57:22 +0200
+
+univention-kernel-image (7.0.0-13) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #34571).
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Tue, 08 Jul 2014 07:26:28 +0200
+
+univention-kernel-image (7.0.0-12) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #34571).
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Wed, 02 Jul 2014 09:33:45 +0200
+
 univention-kernel-image (7.0.0-11) unstable; urgency=low
 
   * Update to the latest kernel build (Bug #35060).
