--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (9.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35264)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 21 Aug 2014 11:05:44 +0200
+
 univention-mail-postfix (8.0.11-3) unstable; urgency=low
 
   * added mail/postfix/ldaptable/debuglevel and
