--- a/mail/univention-spamassassin/debian/changelog
+++ b/mail/univention-spamassassin/debian/changelog
@@ -1,3 +1,9 @@
+univention-spamassassin (6.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35264)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Mon, 18 Aug 2014 13:23:05 +0200
+
 univention-spamassassin (5.0.0-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30945)
