* Don't set specific bootsplash theme for every server role   (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52899 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-server/debian/changelog
+++ b/base/univention-server/debian/changelog
@@ -1,3 +1,10 @@
+univention-server (10.0.1-1) unstable; urgency=low
+
+  * Don't set specific bootsplash theme for every server role
+    (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 21 Aug 2014 13:36:44 +0200
+
 univention-server (10.0.0-4) unstable; urgency=low
 
   * Fix dependency ordering (Bug #35637)
