--- a/nagios/univention-nagios-smart/debian/changelog
+++ b/nagios/univention-nagios-smart/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios-smart (4.0.0-2) unstable; urgency=low
+
+  * Bug #35265: fix dh_fixperms call
+
+ -- Florian Best <best@univention.de>  Thu, 21 Aug 2014 14:34:17 +0200
+
 univention-nagios-smart (4.0.0-1) unstable; urgency=low
 
   * Starting UCS 4.0 development (Bug #35265)
