--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-11) unstable; urgency=low
+
+  * Bug #35670: Switch to 3.16 Linux kernel
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 21 Aug 2014 15:26:03 +0200
+
 univention-dvd (0.2.0-10) unstable; urgency=low
 
   * Bug #35659: Merge UCS-3.2-3 trigger list
