--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.0-1) unstable; urgency=low
+
+  * Starting UCS 4.0 development (Bug #35664)
+
+ -- Drees Dormann <dormann@univention.de>  Thu, 21 Aug 2014 14:19:04 +0200
+
 ucs-test (4.0.166-70) unstable; urgency=low
 
   * 67_udm-dns/
