--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.22-1) unstable; urgency=low
+
+  * Bug #34229: added additional packages for UCS@school auto test
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 21 Aug 2014 16:02:20 +0200
+
 ucs-ec2-tools (0.1.21-2) unstable; urgency=low
 
   * Switch to UCS-3.2-3 AMIs (Bug #35633)
