* In ad/member mode exclude users and clients from license count   which are flagged as synced (Bug #35647)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52916 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.76-25) unstable; urgency=medium
+
+  * In ad/member mode exclude users and clients from license count
+    which are flagged as synced (Bug #35647)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 21 Aug 2014 18:14:48 +0200
+
 univention-directory-manager-modules (9.0.76-24) unstable; urgency=low
 
   [ Stefan Gohmann ]
