--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (4.0.0-4) unstable; urgency=medium
+
+  * LDB_MODULES_PATH=/usr/lib/ldb is not valid any longer with multi-arch
+    just remove it and see how things go (Bug #35319 / Bug #35320)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 21 Aug 2014 21:21:48 +0200
+
 univention-samba4 (4.0.0-3) unstable; urgency=medium
 
   * Samba 4.2 provision now offers the new --site option, so we
