Bug #35637 USS: Fix appliance mode
Since server/role is now empty for the appliance mode,
get_package_for_role() returns None but stores an error message for
later, which is confusing the user.

Skip calling the function if we know it will return None.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52920 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.21-4) unstable; urgency=low
+
+  * Bug #35637: Fix appliance mode
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 21 Aug 2014 22:02:56 +0200
+
 univention-system-setup (8.0.21-3) unstable; urgency=low
 
   * Bug #35675: Re-add empty scripts directories.
