* Create /var/run/slapd directory if it does not exist (Bug #35143)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52928 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.2-1) unstable; urgency=medium
+
+  * Create /var/run/slapd directory if it does not exist (Bug #35143)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 22 Aug 2014 08:29:55 +0200
+
 univention-ldap (11.0.1-1) unstable; urgency=medium
 
   * Create /var/run/slapd directory if it does not exist (Bug #35143)
