Adapted compat, changelog and copyright (Bug #35266)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52937 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-java/debian/changelog
+++ b/desktop/univention-java/debian/changelog
@@ -1,3 +1,9 @@
+univention-java (7.0.0-1) unstable; urgency=low
+
+  * Starting UCS 4.0 development (Bug #35266)
+
+ -- Alexander Kramer <kramer@univention.de>  Fri, 22 Aug 2014 09:47:35 +0200
+
 univention-java (6.0.0-6) stable; urgency=low
 
   * Fix ucslint issues 
