--- a/desktop/firefox-de/debian/changelog
+++ b/desktop/firefox-de/debian/changelog
@@ -1,3 +1,9 @@
+firefox-de (1:24.7.0esr-1.1) unstable; urgency=low
+
+  * Starting UCS 4.0 development (Bug #35266)
+
+ -- Alexander Kramer <kramer@univention.de>  Fri, 22 Aug 2014 10:03:23 +0200
+
 firefox-de (1:24.7.0esr-1) unstable; urgency=medium
 
   * Update to Firefox 24.7 ESR (Bug #35444)
