--- a/desktop/firefox-en/debian/changelog
+++ b/desktop/firefox-en/debian/changelog
@@ -1,3 +1,9 @@
+firefox-en (1:24.7.0esr-2) unstable; urgency=low
+
+  * Bug #35266: Starting UCS 4,0 development 
+
+ -- Alexander Kramer <kramer@univention.de>  Fri, 22 Aug 2014 10:01:50 +0200
+
 firefox-en (1:24.7.0esr-1) unstable; urgency=medium
 
   * Update to Firefox 24.7 ESR (Bug #35444)
