--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.000-00.1) unstable; urgency=low
+
+  * Migrated ucs-test to UCS-4.0-0 (Bug #35664)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 22 Aug 2014 10:09:35 +0200
+
 ucs-test (4.0.166-70) unstable; urgency=low
 
   * 67_udm-dns/
