* Migrated ucs-test-tools to UCS-4.0-0 (Bug #35664)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52942 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test-tools/debian/changelog
+++ b/test/ucs-test-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test-tools (4.0.0-1) unstable; urgency=low
+
+  * Migrated ucs-test-tools to UCS-4.0-0 (Bug #35664)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 22 Aug 2014 10:36:25 +0200
+
 ucs-test-tools (3.0.0-1) unstable; urgency=low
 
   * import_ldif_*: added two new tools to import a test
