--- a/test/ucs-windows-tools/debian/changelog
+++ b/test/ucs-windows-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-windows-tools (2.0.0-1) unstable; urgency=low
+
+  * Migrated ucs-windows-tools to UCS-4.0-0 (Bug #35664)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 22 Aug 2014 10:43:37 +0200
+
 ucs-windows-tools (1.0.0-8) unstable; urgency=low
 
   * added create_ad_groups etc to lib (Bug #35096) 
