* Migrated univention-demo-configuration to UCS-4.0-0 (Bug #35664)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52946 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/changelog
+++ b/test/univention-demo-configuration/debian/changelog
@@ -1,3 +1,9 @@
+univention-demo-configuration (3.0.0-01) unstable; urgency=low
+
+  * Migrated univention-demo-configuration to UCS-4.0-0 (Bug #35664)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 22 Aug 2014 10:49:16 +0200
+
 univention-demo-configuration (2.0.2-10) unstable; urgency=low
 
   * Bug #33443: Allow usage of new Updater module methods
