--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.0-3) unstable; urgency=low
+
+  * fixed wrong python verion in /tests/10_ldap/ldap_extensions_utils.py 
+  (Bug #35664)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 22 Aug 2014 12:43:52 +0200
+
 ucs-test (5.0.0-2) unstable; urgency=low
 
   * bump version number
