--- a/mail/univention-antivir-mail/debian/changelog
+++ b/mail/univention-antivir-mail/debian/changelog
@@ -1,3 +1,9 @@
+univention-antivir-mail (6.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35264)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Mon, 18 Aug 2014 13:29:11 +0200
+
 univention-antivir-mail (5.0.0-4) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30945)
