--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.21-5) unstable; urgency=low
+
+  * Bug #35641: Fix master DNS server via DHCP.
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 22 Aug 2014 10:12:32 +0200
+
 univention-system-setup (8.0.21-4) unstable; urgency=low
 
   * Bug #35637: Fix appliance mode
