* bump version number (Bug #35664)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52968 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.0-4) unstable; urgency=low
+
+  * bump version number
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 22 Aug 2014 14:01:26 +0200
+
 ucs-test (5.0.0-3) unstable; urgency=low
 
   * fixed wrong python verion in /tests/10_ldap/ldap_extensions_utils.py 
