* removed "dh_install --sourcedir=$(CURDIR)" from debian/rules in attempt to 	fix build problems(Bug #35664)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52971 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.0-5) unstable; urgency=low
+
+  * removed "dh_install --sourcedir=$(CURDIR)" from debian/rules in attempt to
+  	fix build problems(Bug #35664)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 22 Aug 2014 14:34:55 +0200
+
 ucs-test (5.0.0-4) unstable; urgency=low
 
   * bump version number
