* univention/testing/data.py, line 824:   changed "apt.apt_pkg.ParseDepends(dependency)" to   "apt.apt_pkg.parse_depends(dependency)"   (Bug #35664)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52972 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,12 @@
+ucs-test (5.0.0-6) unstable; urgency=low
+
+  * univention/testing/data.py, line 824:
+    changed "apt.apt_pkg.ParseDepends(dependency)" to
+    "apt.apt_pkg.parse_depends(dependency)"
+    (Bug #35664)
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 22 Aug 2014 15:07:01 +0200
+
 ucs-test (5.0.0-5) unstable; urgency=low
 
   * removed "dh_install --sourcedir=$(CURDIR)" from debian/rules in attempt to
