--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (5.0.0-7) unstable; urgency=medium
+
+  * Remove executable for debian/*install files, debhelper 9 tries to
+    execute the files (Bug #35664)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 22 Aug 2014 15:26:47 +0200
+
 ucs-test (5.0.0-6) unstable; urgency=low
 
   * univention/testing/data.py, line 824:
