Bug #35659 d-i: Install recommended packages
Setting base-installer/install-recommends=true only removed the
$APT_CONFDIR/00InstallRecommends after the base installer has finished
installing the extra packages included through pre-seeding. This is too
late as u-base-packages <- u-config-registry <- u-directory-policy <-
u-updater <- u-management-console-setup <- u-system-setup <-
u-system-setup-boot already required the installation.

Remove the APT configuration file preventing the installation of
recommended packages.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52974 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+di-univention-system-setup (0.0.9-4) unstable; urgency=low
+
+  * Bug #35659: Install recommended packages
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 22 Aug 2014 16:02:13 +0200
+
 di-univention-system-setup (0.0.9-3) unstable; urgency=low
 
   * Bug #35378: Start network in chroot
