Revert "Bug #35659 d-i: Install recommended packages"
This reverts commit f451d1f9f941bf1ebc59402b417941b742eaa459 as
base-installer/include-packages is passed directly to debootstrap, which
does not install recommended packages by default.

Doing do is a bad idea, as this then also pulls in a MTA, which needs
additional configuration.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@52977 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+di-univention-system-setup (0.0.9-5) unstable; urgency=low
+
+  * Bug #35659: Revert last change
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 22 Aug 2014 18:52:42 +0200
+
 di-univention-system-setup (0.0.9-4) unstable; urgency=low
 
   * Bug #35659: Install recommended packages
