--- a/mail/univention-mail-cyrus/debian/changelog
+++ b/mail/univention-mail-cyrus/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-cyrus (7.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35264)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 22 Aug 2014 16:43:35 +0200
+
 univention-mail-cyrus (6.0.6-1) unstable; urgency=low
 
   * honour mail/cyrus/mailbox/delete when removing
