--- a/mail/univention-mail-cyrus-murder/debian/changelog
+++ b/mail/univention-mail-cyrus-murder/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-cyrus-murder (6.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35264)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 22 Aug 2014 19:20:26 +0200
+
 univention-mail-cyrus-murder (5.0.0-1) unstable; urgency=low
 
   * Bump version for UCS 3.2, update copyright for 2013
