--- a/base/univention-server/debian/changelog
+++ b/base/univention-server/debian/changelog
@@ -1,3 +1,9 @@
+univention-server (10.0.1-2) unstable; urgency=low
+
+  * Bug #35659: Install recommended packages again
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 25 Aug 2014 10:23:39 +0200
+
 univention-server (10.0.1-1) unstable; urgency=low
 
   * Don't set specific bootsplash theme for every server role
