--- a/mail/univention-mail-canonical-maps/debian/changelog
+++ b/mail/univention-mail-canonical-maps/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-canonical-maps (3.0.0-1) unstable; urgency=medium
+
+  * Update to UCS 4.0 (Bug #35264)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Mon, 25 Aug 2014 12:46:45 +0200
+
 univention-mail-canonical-maps (2.0.0-1) unstable; urgency=low
 
   * abort join script on failing udm call (Bug #27753)
