* New test for Bug #35647
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@52995 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-71) unstable; urgency=medium
+
+  * New test for Bug #35647
+
+ -- Arvid Requate <requate@univention.de>  Mon, 25 Aug 2014 13:36:46 +0200
+
 ucs-test (4.0.166-70) unstable; urgency=low
 
   * 67_udm-dns/
