--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-2) unstable; urgency=low
+
+  * WIP: Integration of cloud instance management with libcloud (Bug #32842)
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 25 Aug 2014 13:55:26 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-1) unstable; urgency=low
 
   * UCS-4.0 version bump (Bug #35425)
