* Another test case for Bug #35647
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-3@53001 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-72) unstable; urgency=medium
+
+  * Another test case for Bug #35647
+
+ -- Arvid Requate <requate@univention.de>  Mon, 25 Aug 2014 15:44:08 +0200
+
 ucs-test (4.0.166-71) unstable; urgency=medium
 
   * New test for Bug #35647
