--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (5.0.0-9) unstable; urgency=medium
+
+  * Another test case for Bug #35647
+
+ -- Arvid Requate <requate@univention.de>  Mon, 25 Aug 2014 15:46:05 +0200
+
 ucs-test (5.0.0-8) unstable; urgency=medium
 
   * New test for Bug #35647
