Bug #35636 USS: Disable CD-ROM as APT source
after running Univenion-System-Setup-Boot.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53003 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/di-univention-system-setup/debian/changelog
+++ b/base/di-univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+di-univention-system-setup (0.0.9-6) unstable; urgency=low
+
+  * Bug #35636: Disable CD-ROM as APT source
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 25 Aug 2014 15:32:47 +0200
+
 di-univention-system-setup (0.0.9-5) unstable; urgency=low
 
   * Bug #35659: Revert last change
