Add UDM module Cloud Connection and icons for Connection and Type (Bug #32842)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53004 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (4.0.0-3) unstable; urgency=low
+
+  * Add UDM module Cloud Connection and icons for Connection and Type (Bug #32842)
+
+ -- Andreas Peichert <peichert@univention.de>  Mon, 25 Aug 2014 16:19:39 +0200
+
 univention-virtual-machine-manager-daemon (4.0.0-2) unstable; urgency=low
 
   * WIP: Integration of cloud instance management with libcloud (Bug #32842)
