--- a/virtualization/univention-virtual-machine-manager-daemon/umc/de.po
+++ b/virtualization/univention-virtual-machine-manager-daemon/umc/de.po
@@ -17,3 +17,9 @@ msgstr "Verwaltung virtueller Maschinen"
 
 msgid "Virtual machines (UVMM)"
 msgstr "Virtuelle Maschinen (UVMM)"
+
+msgid "Manages Cloud Connections"
+msgstr "Verwaltung von Cloud-Zugangsdaten"
+
+msgid "Cloud Connections (UVMM)"
+msgstr "Cloud-Zugangsdaten (UVMM)"
