--- a/base/univention-server/debian/changelog
+++ b/base/univention-server/debian/changelog
@@ -1,3 +1,9 @@
+univention-server (10.0.1-3) unstable; urgency=low
+
+  * Bug #35635: Fix UCR variable quoting
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 25 Aug 2014 16:14:32 +0200
+
 univention-server (10.0.1-2) unstable; urgency=low
 
   * Bug #35659: Install recommended packages again
