--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,4 +1,10 @@
-univention-ad-connector (9.0.0-1) UNRELEASED; urgency=medium
+univention-ad-connector (9.0.0-2) unstable; urgency=medium
+
+  * Another python2.7 fix (Bug #35320)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 25 Aug 2014 16:44:17 +0200
+
+univention-ad-connector (9.0.0-1) unstable; urgency=medium
 
   * version bump for UCS 4.0 (Bug #35319)
   * Adjust for python2.7
