--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (9.0.4-4) unstable; urgency=medium
+
+  * the third half.. (Bug #35320)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 25 Aug 2014 18:17:57 +0200
+
 univention-s4-connector (9.0.4-3) unstable; urgency=medium
 
   * the second half of the fix for python-ldap 2.4 (Bug #35320)
