* Set UCR variable for server role before installing server role   package (Bug #35699)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53015 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.23-1) unstable; urgency=low
+
+  * Set UCR variable for server role before installing server role
+    package (Bug #35699)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 25 Aug 2014 22:08:51 +0200
+
 univention-system-setup (8.0.22-1) unstable; urgency=low
 
   * Bug #35685: add possibility to hide fields in system-setup-appliance mode
