* Remove Univention Thin Client from /etc/issue* (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53016 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.1-1) unstable; urgency=low
+
+  * Remove Univention Thin Client from /etc/issue* (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Aug 2014 06:55:34 +0200
+
 univention-base-files (4.0.0-6) unstable; urgency=low
 
   * Remove old codenames (Bug #35635)
