* Added amd64 firefox binary (Bug #35266)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53017 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/firefox-en/debian/changelog
+++ b/desktop/firefox-en/debian/changelog
@@ -1,3 +1,9 @@
+firefox-en (1:24.7.0esr-3) unstable; urgency=low
+
+  * Added amd64 firefox binary (Bug #35266)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Aug 2014 07:55:27 +0200
+
 firefox-en (1:24.7.0esr-2) unstable; urgency=low
 
   * Bug #35266: Starting UCS 4,0 development 
