--- a/desktop/firefox-de/debian/changelog
+++ b/desktop/firefox-de/debian/changelog
@@ -1,3 +1,9 @@
+firefox-de (1:24.7.0esr-3) unstable; urgency=low
+
+  * Added amd64 firefox binary (Bug #35266)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Aug 2014 07:56:44 +0200
+
 firefox-de (1:24.7.0esr-2) unstable; urgency=low
 
   * Starting UCS 4.0 development (Bug #35266)
