* Use firefox instead of iceweasel by default (Bug #35266)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53018 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.24-1) unstable; urgency=low
+
+  * Use firefox instead of iceweasel by default (Bug #35266)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Aug 2014 08:56:49 +0200
+
 univention-system-setup (8.0.23-1) unstable; urgency=low
 
   * Set UCR variable for server role before installing server role
