* Bug #35685: Replace helptexts when fields are disabled
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53019 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.25-1) unstable; urgency=low
+
+  * Bug #35685: Replace helptexts when fields are disabled
+
+ -- Florian Best <best@univention.de>  Tue, 26 Aug 2014 08:58:27 +0200
+
 univention-system-setup (8.0.24-1) unstable; urgency=low
 
   * Use firefox instead of iceweasel by default (Bug #35266)
