* Bug #35685: fix hasPrevious() hasNext() next() and previous() methods for Wizards which have the first or last page invisible. This fixes also displaying of back/next buttons.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53024 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (4.0.3-1) unstable; urgency=low
+
+  * Bug #35685: fix hasPrevious() hasNext() next() and previous() methods for
+  	Wizards which have the first or last page invisible. This fixes also
+  	displaying of back/next buttons.
+
+ -- Florian Best <best@univention.de>  Tue, 26 Aug 2014 11:05:38 +0200
+
 univention-management-console-frontend (4.0.2-1) unstable; urgency=low
 
   * Bug #35145: use closure as JavaScript build optimizer
