--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (8.0.1-1) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #35669)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Aug 2014 12:33:30 +0200
+
 univention-kernel-image (8.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 and switch to kernel 3.16 (Bug #35669)
