--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-13) unstable; urgency=low
+
+  * Bug #35659: Install recommended packages
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 26 Aug 2014 07:28:20 +0200
+
 univention-dvd (0.2.0-12) unstable; urgency=low
 
   * Bug #35659: Merge UCS-3.2-3 trigger list
