Bug #35670 CD: Update UCS kernel build
3.16-ucs80

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53030 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -2,6 +2,7 @@ univention-dvd (0.2.0-13) unstable; urgency=low
 
   * Bug #35659: Install recommended packages
   * Bug #35371: Change ISO volume ID to use UCS
+  * Bug #35670: Update UCS kernel build
 
  -- Philipp Hahn <hahn@univention.de>  Tue, 26 Aug 2014 07:28:20 +0200
 
