Bug #35685 USS: move UCR unset to section called as root
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53035 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -2,6 +2,7 @@ univention-system-setup (8.0.26-1) unstable; urgency=low
 
   * Bug #35685: prevent errors when certain values aren't sent along with
   	join() request
+  * Bug #35685: move UCR unset to section called as root.
 
  -- Florian Best <best@univention.de>  Tue, 26 Aug 2014 14:30:08 +0200
 
