--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.26-2) unstable; urgency=low
+
+  * Bug #35685: hide also first page (welcome)
+
+ -- Florian Best <best@univention.de>  Tue, 26 Aug 2014 16:09:09 +0200
+
 univention-system-setup (8.0.26-1) unstable; urgency=low
 
   * Bug #35685: prevent errors when certain values aren't sent along with
