--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.2-1) unstable; urgency=low
+
+  * Update to UCR templates to new upstream versions (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Aug 2014 17:05:59 +0200
+
 univention-base-files (4.0.1-1) unstable; urgency=low
 
   * Remove Univention Thin Client from /etc/issue* (Bug #35138)
