* Update to UCR templates to new upstream versions (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53043 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (8.0.1-1) unstable; urgency=low
+
+  * Update to UCR templates to new upstream versions (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Aug 2014 17:15:12 +0200
+
 univention-grub (8.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35138)
