--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.99-2) unstable; urgency=low
+
+  * Bug #34333: failures on report creation can not block UMC usage anymore
+
+ -- Florian Best <best@univention.de>  Tue, 26 Aug 2014 17:42:13 +0200
+
 univention-management-console-module-udm (4.0.99-1) unstable; urgency=low
 
   * Bug #35610: version bump
