--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (9.0.1-1) unstable; urgency=low
+
+  * Update to UCR templates to new upstream versions (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Aug 2014 17:47:26 +0200
+
 univention-quota (9.0.0-4) unstable; urgency=low
 
   * Merge from UCS 3.2-2 (Bug #33174) (svn r51632)
