--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.28-1) unstable; urgency=low
+
+  * Bug #35582: Show "about to reboot" hint on last page on installation
+
+ -- Florian Best <best@univention.de>  Tue, 26 Aug 2014 18:26:12 +0200
+
 univention-system-setup (8.0.27-1) unstable; urgency=low
 
   * Set UCR variable for server role before installing server role
