Bug #35378 USS: Merge di-univention-system-setup package
Fix ucslint errors.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53054 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.29-1) unstable; urgency=low
+
+  * Bug #35378: Merge di-univention-system-setup package
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 26 Aug 2014 17:29:15 +0200
+
 univention-system-setup (8.0.28-1) unstable; urgency=low
 
   * Bug #35582: Show "about to reboot" hint on last page on installation
