Bug #35378 USS: Merge di-univention-system-setup package
Add missing depends on subst-var ${misc:Depends}

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53056 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.29-2) unstable; urgency=low
+
+  * Bug #35378: Merge di-univention-system-setup package
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 26 Aug 2014 20:05:39 +0200
+
 univention-system-setup (8.0.29-1) unstable; urgency=low
 
   * Bug #35378: Merge di-univention-system-setup package
