* Switch from gdm to kdm (Bug #35266) * Use startkde as default session (Bug #35266)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53058 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/univention-kde/debian/changelog
+++ b/desktop/univention-kde/debian/changelog
@@ -1,3 +1,10 @@
+univention-kde (9.0.1-1) unstable; urgency=low
+
+  * Switch from gdm to kdm (Bug #35266)
+  * Use startkde as default session (Bug #35266)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 26 Aug 2014 21:06:42 +0200
+
 univention-kde (9.0.0-1) unstable; urgency=low
 
   * Starting UCS 4.0 development (Bug #35266)
