--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (11.0.3-1) unstable; urgency=medium
+
+  * Call samba-ad-dc init script instead of samba4 (Bug #35319)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 26 Aug 2014 21:21:32 +0200
+
 univention-ldap (11.0.2-1) unstable; urgency=medium
 
   * Create /var/run/slapd directory if it does not exist (Bug #35143)
