--- a/services/univention-printserver/debian/changelog
+++ b/services/univention-printserver/debian/changelog
@@ -1,3 +1,9 @@
+univention-printserver (8.0.0-4) unstable; urgency=medium
+
+  * Call samba-ad-dc init script instead of samba4 (Bug #35319)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 26 Aug 2014 21:24:01 +0200
+
 univention-printserver (8.0.0-3) unstable; urgency=low
 
   * updated printer models in join script (Bug #35147) 
