* Consider multiarch changes for the samba4 dlz module (Bug #35320)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@53067 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-bind/debian/changelog
+++ b/services/univention-bind/debian/changelog
@@ -1,3 +1,9 @@
+univention-bind (9.0.1-1) unstable; urgency=medium
+
+  * Consider multiarch changes for the samba4 dlz module (Bug #35320)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 27 Aug 2014 09:13:40 +0200
+
 univention-bind (9.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35147) 
