--- a/services/univention-bind/debian/changelog
+++ b/services/univention-bind/debian/changelog
@@ -1,3 +1,9 @@
+univention-bind (9.0.3-1) unstable; urgency=low
+
+  * Also consider multiarch changes for LDB_MODULES_PATH (Bug #35320)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 27 Aug 2014 09:46:58 +0200
+
 univention-bind (9.0.2-1) unstable; urgency=low
 
   * Better use a new dict to make ucslint happy (Bug #35320)
